test/inference/bad/typeclass_overload_and_local_let_bound.mlt
type bool = True | False
class Eq 'a { equal : 'a -> 'a -> bool }
instance Eq int { equal = fun x y -> True }
let foo = equal 1 2
let bar = let equal = 1 in fun x y -> True

